name          : FunFlow
version       : 0.0.0.1
synopsis      : Control-flow analysis of a simple functional programming language.
homepage      : https://github.com/pepijnkokke/FunFlow
license       : MIT
author        : Pepijn Kokke
maintainer    : pepijn.kokke@gmail.com
copyright     : (c) 2013 Pepijn Kokke
category      : Language
build-type    : Simple
cabal-version : >= 1.8

library
  exposed-modules : FUN
  build-depends   : base == 4.5.*, uu-parsinglib == 2.8.*
  hs-source-dirs  : src