name          : FunFlow
version       : 0.2.0.0
synopsis      : Control-flow analysis of a simple functional programming language.
homepage      : https://github.com/wenkokke/FunFlow
license       : MIT
author        : Wen Kokke, Wout Elsinghorst
copyright     : (c) 2013 Wen Kokke, Wout Elsinghorst
category      : Language
build-type    : Simple
cabal-version : >= 1.8

library
  exposed-modules : FUN
  build-depends   : base == 4.5.*, uu-parsinglib == 2.8.*, monad-supply == 0.3.*,
                    mtl == 2.1.*, containers == 0.5.*
  hs-source-dirs  : src